--- a/resources/notify.css
+++ b/resources/notify.css
@@ -33,6 +33,15 @@ table.data-table td {
     padding: 1px 4px;
 }
 
+/* Calendar table */
+table.calendar-table th {
+    width: 9em;
+}
+
+table.calendar-table td {
+    height: 7em;
+}
+
 
 /* Config field set */
 fieldset.config {
